<resources>
    <string name="send_email">Send Email</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="no_email">This user has no email business_address</string>
    <string name="no_phone_number">This user has no phone number</string>
    <string name="msg_request_time_out">Request timeout</string>
    <string name="msg_network_not_available">Network is not available</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="food_and_beverages">Food and Beverages</string>
    <string name="travel_hotel">Hotels &amp; Traveling</string>
    <string name="email_address">E-mail address</string>
    <string name="hint_email_address">E-mail address*</string>
    <string name="phone_number">Phone number</string>
    <string name="hint_phone_number">Phone number*</string>
    <string name="password">Password</string>
    <string name="password_require">Password*</string>
    <string name="retype_password">Re-type password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="full_name">Full name</string>
    <string name="hint_full_name">Full name*</string>
    <string name="create_account">Create account</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="my_favorites">My favourites</string>
    <string name="transport_deliveries">Transport &amp; Deliveries </string>
    <string name="food_beverages">Foods &amp; Beverages</string>
    <string name="labor">Labor (jobs)</string>
    <string name="travel">Hotels &amp; Traveling</string>
    <string name="shopping">Shopping, Beauty &amp; Health</string>
    <string name="other_deals">Other nearby deals</string>
    <string name="other_deal">Other nearby deal</string>
    <string name="all_deals">All other deals</string>
    <string name="search">Search</string>
    <string name="find_taxi">Find Taxi</string>
    <string name="deal_transport">Booking</string>
    <string name="deal_delivery">Booking</string>
    <string name="taxi_chat">Chat</string>
    <string name="my_account">My Account</string>
    <string name="pay_">Pay</string>
    <string name="news_and_events">News &amp; Events</string>
    <string name="taxi_biz">Taxi-biz</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="me">Me</string>
    <string name="log_out">Log out</string>
    <string name="advance_search">Advance Search</string>
    <string name="keyword">Keywords</string>
    <string name="value_km">%1$s Km</string>
    <string name="value_meter">%1$s m</string>
    <string name="value_best_deals">Show %1$s best deals</string>
    <string name="available_now">Available now</string>
    <string name="remember_me">Remember me</string>
    <string name="dollar_value">$%1$s</string>
    <string name="negative_dollar_value">-$%1$s</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="view_on_map">View on map</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="i_am_available_for_driving">I\'m available for driving</string>
    <string name="duration_buying">Duration buying</string>
    <string name="my_trip">My trips</string>
    <string name="trip_manager">Trip manager</string>
    <string name="iwanadeal">iwanadeal</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no business_address found</string>
    <string name="address_found">Address found</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="msg_no_network">Network is not available</string>
    <string name="msg_can_not_get_email">Failed to login. Can not get your email business_address</string>
    <string name="msg_have_some_errors">Have some errors, please try again</string>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="msg_remind_user_grants_permissions">Application can not work correctly if it\'s not enough permissions</string>
    <string name="msg_remind_user_turn_on_location">Application can not work correctly if you don\'t turn on Google\'s location</string>
    <string name="msg_remind_user_grant_location">Passengers will not find you if you don\'t grant location permission.\nPlease grant location or you will not be available for searching</string>
    <string name="no_thank">No</string>
    <string name="allow">Allow</string>
    <string name="msg_name_is_required">Name is required</string>
    <string name="msg_email_is_required">Email is not valid</string>
    <string name="msg_phone_is_required">Phone number is required</string>
    <string name="msg_password_is_required">Password includes at least 8 characters containing at least 1 number and no special characters</string>
    <string name="msg_password_is_not_match">Password is not match</string>
    <string name="from">From</string>
    <string name="from_value">From: %1$s</string>
    <string name="to">To</string>
    <string name="to_value">To: %1$s</string>
    <string name="approximate_price_value">Approximate price: $%1$s</string>
    <string name="passengers_value">Passengers: %1$s</string>
    <string name="turn_on">Turn on</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_delivery">Taxi-Delivery</string>
    <string name="vip">VIP</string>
    <string name="vip_delivery">VIP-Delivery</string>
    <string name="lifts">Lifts</string>
    <string name="lift_delivery">Lifts-Delivery</string>
    <string name="motorbike">Moto</string>
    <string name="motor_delivery">Motor-Delivery</string>
    <string name="delivery">Delivery</string>
    <string name="more_info">More info</string>
    <string name="tuktuk">Tuk Tuk</string>
    <string name="settings_notification">Allow Notifications</string>
    <string name="settings_my_favourite">My favourite</string>
    <string name="settings_transport_deliveries"><![CDATA[Transport & Deliveries]]></string>
    <string name="settings_food_beverages"><![CDATA[Foods & Beverages]]></string>
    <string name="settings_labor">Labor (jobs)</string>
    <string name="settings_travelling">Travelling</string>
    <string name="settings_shopping">Shopping</string>
    <string name="settings_other_near_by_deal">Others nearby deals</string>
    <string name="iwana_pay_buy_credit">Buy credits</string>
    <string name="iwana_pay_redeem">Redeem</string>
    <string name="iwana_pay_tranfers">Transfer</string>
    <string name="iwana_pay_histories">History</string>
    <string name="business_address">Address</string>
    <string name="hint_business_address">Address*</string>
    <string name="edit_image">Edit</string>
    <string name="title_my_account">Canning vate WA 6155, AU</string>
    <string name="button_reviews">View Reviews</string>
    <string name="general">General</string>
    <string name="bussiness_name">Business name</string>
    <string name="hint_bussiness_name">Business name*</string>
    <string name="info_car">Car Information</string>
    <string name="car_make">Car make</string>
    <string name="hint_car_make">Car make*</string>
    <string name="model">Model</string>
    <string name="hint_model">Model*</string>
    <string name="year">Year</string>
    <string name="hint_year">Year*</string>
    <string name="petrol">Petrol</string>
    <string name="gaz">Gaz</string>
    <string name="gaz_online">Gazonline</string>
    <string name="yearly_insurance">Yearly insurance</string>
    <string name="yearly_tax">Yearly tax</string>
    <string name="permit">Permit</string>
    <string name="pro">Pro</string>
    <string name="msg_settings_notifications">Please enable notifications</string>
    <string name="rate">Rate</string>
    <string name="msg_choose_pickup">Please choose pickup</string>
    <string name="msg_choose_destination">Please choose destination</string>
    <string name="msg_choose_driver">Please click on a transport marker to choose your driver</string>
    <string name="headphone">Headphone</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="description">Description</string>
    <string name="timming">Duration of deal (hours)</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="type_deal">Deal Type</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="total">Total</string>
    <string name="submit">Submit</string>
    <string name="create_new_taxi">Create New Taxi</string>
    <string name="start_driver">Start driver</string>
    <string name="view_reviews">Reviews</string>
    <string name="distance">Distance</string>
    <string name="eta">ETA</string>
    <string name="estimateFare">Fare</string>
    <string name="estimate_fare">Estimate fare</string>
    <string name="track">Track</string>
    <string name="finish">Finish</string>
    <string name="trip_tracking">Trip tracking</string>
    <string name="trip_finishing">Trip finishing</string>
    <string name="button_save_and_submit"><![CDATA[Save & Submit]]></string>
    <string name="msg_update_avatar">Please update your avatar!</string>
    <string name="button_redeem">Redeem</string>
    <string name="button_transfer">Transfer</string>
    <string name="input">Input</string>
    <string name="hint_input">Input*</string>
    <string name="msg_enought_credits">Your credits is not enough</string>
    <string name="radius">Radius</string>
    <string name="amount_of_deals_to_show">Amount of deals to show</string>
    <string name="title">Title</string>
    <string name="original_price">Original Price(*)</string>
    <string name="type_of_transport">Type of Transport</string>
    <string name="fuel">Fuel</string>
    <string name="amount_of_yearly_kilometres">Amount of yearly kilometres (kms)*</string>
    <string name="num_years_use_car">Years you intend to use the car</string>
    <string name="road_taxes_per_year"><![CDATA[Yearly car & road taxes*($)]]></string>
    <string name="my_location">My location</string>
    <string name="category">Category</string>
    <string name="average_consumption_of_car">Fuel consumption (km/l)*</string>
    <string name="price_per_liter">Price per liter of your fuel($/l)*</string>
    <string name="cost_of_garage">Yearly parking costs (if any)($)</string>
    <string name="insurance_costs">Yearly insurance costs*($)</string>
    <string name="maintenance_costs">Yearly maintenance costs*($)</string>
    <string name="price_new_tyres">Price of 4 new tyres($)</string>
    <string name="general_infomations">General Information</string>
    <string name="pay">Pay</string>
    <string name="faq">FAQ\'s</string>
    <string name="forgot_message_description">Please enter your email so \n we can send  you a link to reset your password</string>
</resources>