<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_transport_deals"
            android:checkable="false"
            android:icon="@drawable/ic_car"
            android:title="@string/find_taxi" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/taxi_chat" />

        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_payment"
            android:title="@string/pay" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_account" />

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:checkable="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_about_us"
            android:checkable="true"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_faqs"
            android:checkable="true"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:checkable="true"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_log_out"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>
