<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_gadient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_4x"
        android:paddingLeft="@dimen/dimen_6x"
        android:paddingRight="@dimen/dimen_6x">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dimen_1x"
            android:layout_marginStart="@dimen/dimen_1x"
            android:layout_marginTop="@dimen/dimen_3x"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sign_in" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_2x"
            android:layout_marginTop="@dimen/dimen_3x"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/txt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_2x"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_phone_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:padding="@dimen/dimen_05x"
                android:drawableRight="@drawable/ic_arrow_drop_down_white"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_2x"
                android:layout_marginLeft="@dimen/dimen_1x"
                android:layout_weight="0.7"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_2x"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_05x"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/txt_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/chk_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <com.suusoft.locoindia.widgets.textview.TextViewBold
            android:id="@+id/lbl_create_account"
            android:layout_marginTop="@dimen/dimen_1x"
            android:padding="@dimen/dimen_x1x"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:background="@drawable/bg_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <com.suusoft.locoindia.widgets.textview.TextViewRegular
            android:id="@+id/lbl_already_a_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_1x"
            android:text="@string/already_a_member"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</ScrollView>